--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <div class="buttons">
 
-                <img id="i"/>
+                <img id="i" src="" alt="image"/>
 
 
                 <button id="load" onclick="myCanvas()">Load</button>
